objects/FSL_Parts__c.object
<CustomObject>
    <description>This Object is created to store the parts list from the Get Campaigns Service.</description>
    <fields>
        <fullName>ATC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Service order</description>
        <label>ATC</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>ATCs</relationshipLabel>
        <relationshipName>ATC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>CSS_Solution_Component__r.Account_Code__r.Name</formula>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Solution_Component__c</fullName>
        <description>failures</description>
        <label>Failure</label>
        <referenceTo>CSS_Solution_Component__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service order</description>
        <label>Campaign</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPR_Flag__c</fullName>
        <label>EPR Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code__c</fullName>
        <formula>CSS_Solution_Component__r.Fail_Code_Fail_Mode__c</formula>
        <label>Fail Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureName__c</fullName>
        <label>FailureName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Fail_Code__c</fullName>
        <formula>CSS_Solution_Component__r.Failure_Value__c</formula>
        <label>Failure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Action__c</fullName>
        <formula>CSS_Solution_Component__r.Field_Action__c</formula>
        <label>Field Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSQ_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSQ</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Suggested Parts Based on Failure-GSQ Part</relationshipLabel>
        <relationshipName>GSQ_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Number__c</fullName>
        <label>Option Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Details__c</fullName>
        <formula>&apos;Quantity: &apos;+ TEXT ( Part_Quantity__c ) + br()+
&apos;Size: &apos;+ ( Part_Size__c ) + br()+
&apos;Option Number: &apos;+  Option_Number__c + br()+
&apos;Failure: &apos;+ Failure_Fail_Code__c</formula>
        <label>Part Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <label>Part Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <externalId>true</externalId>
        <label>Part Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Size__c</fullName>
        <label>Part Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performed_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replacement_Repair_Reason__c</fullName>
        <label>Replacement / Repair Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign-TRP-ATC</fullName>
                </value>
                <value>
                    <fullName>Damaged Upon Removal</fullName>
                </value>
                <value>
                    <fullName>Suggested Parts Based on Failure (GSQ Part)</fullName>
                </value>
                <value>
                    <fullName>Progressive Damage</fullName>
                </value>
                <value>
                    <fullName>Root Cause</fullName>
                </value>
                <value>
                    <fullName>Service Publication</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Message__c</fullName>
        <label>Return Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_to_Factory__c</fullName>
        <formula>If( EPR_Flag__c = &apos;N&apos;, &apos;No&apos;, If(EPR_Flag__c = &apos;Y&apos;, &apos;Yes&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return to Factory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <description>parts</description>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Parts (Service Order)</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Solution_Title__c</fullName>
        <formula>Solution__r.Name + &apos; - &apos; + Solution__r.Solution_Title__c</formula>
        <label>Solution Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>CSS_Solutions__c</referenceTo>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service order</description>
        <label>TRP</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>TRPs</relationshipLabel>
        <relationshipName>TRP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATC</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>GSQ</fullName>
                </value>
                <value>
                    <fullName>OC</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
                <value>
                    <fullName>TTML</fullName>
                </value>
                <value>
                    <fullName>URP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>GSQ_Service_Order__c</columns>
        <columns>Part_Name__c</columns>
        <columns>Part_Quantity__c</columns>
        <columns>Field_Action__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Replacement_Repair_Reason__c</columns>
        <columns>CSS_Solution_Component__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Order__c</field>
            <operation>equals</operation>
            <value>00001816</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Order__c</field>
            <operation>contains</operation>
            <value>1840</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <recordTypes>
        <fullName>Campaign</fullName>
        <active>true</active>
        <description>Field Actions related Parts</description>
        <label>FA Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>GSQ</fullName>
        <active>true</active>
        <description>Failure Related GSQ Parts</description>
        <label>GSQ</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Evl_User_Part_Number_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(    
    $Profile.Name =  &quot;EVL_Dealer_Advanced&quot;
     ||
    $Profile.Name =  &quot;EVL_Dealer_Technician&quot;
	||
	 $Profile.Name =  &quot;EVL_Dealer_Readonly&quot;
	,
    ISCHANGED(Name) &amp;&amp; NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>Part Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Service_Order_Closed_Parts</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL(Service_Order__r.Status, &quot;Closed&quot;), 
			ISPICKVAL(Service_Order__r.Status, &quot;Canceled&quot;))</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Part Number cannot be Edited</errorMessage>
    </validationRules>
</CustomObject>